tests/negative/generic_mismatch.sans
// expect-error: undefined function
main() I {
  x = totally_fake_function_xyz()
  x
}
